docs/spec/grammar/conformance/accept/06-wild-and-substrate.myc
// exercises: the wild unsafe block + a Substrate affine-resource parameter
nodule io;

fn read(h: Substrate{Handle}) => Binary{8} =
    wild { foreign_read(h) };
