docs/spec/grammar/conformance/reject/05-reserved-word-ident.myc
// rejected: 'nodule' is a reserved word and cannot be used as an identifier (so are the reserved
// 'phylum'/'colony'; DN-06)
nodule bad;
fn nodule(x: Binary{8}) => Binary{8} = x
